--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
 <!--    <title><%= htmlWebpackPlugin.options.title %></title>-->
-    <title>法律咨询与维权公益平台</title>
+    <title>法律咨询与援助公益平台</title>
   </head>
   <body>
 <!--    <noscript>-->
